--- a/frontend/SmartTraficControlSystem/Components/_Imports.razor
+++ b/frontend/SmartTraficControlSystem/Components/_Imports.razor
@@ -1,13 +1,18 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
+﻿@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.JSInterop
-@using SmartTraficControlSystem
-@using SmartTraficControlSystem.Components
-@using MudBlazor
+@using Microsoft.AspNetCore.Components.Authorization
+@using SmartTraficControlSystem.Components.Layout
+@using SmartTraficControlSystem.Components.PopUp
+@using SmartTraficControlSystem.Components.Forms
+@using SmartTraficControlSystem.Components.Pages
 @using SmartTraficControlSystem.Utilities.Theme
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Web
+@using SmartTraficControlSystem.Components
 @using Microsoft.AspNetCore.Components
+@using SmartTraficControlSystem
+@using System.Net.Http.Json
+@using Microsoft.JSInterop
+@using System.Net.Http
+@using MudBlazor
